Add DC Power to OROS ESS and improve simulation